# Apple-II-System-Masters

./: .gitignore  AUTHORS  Dockerfile  Makefile.am  NEWS  README  configure.ac  docker-compose.yml  index.html
dos310/: README  clean31sysmas_stock_rawdos.d13  clean31sysmas_stock_rawdos.nib  original31sysmas.d13  original31sysmas.d13.woz  stock31init.d13  stock31init.nib  stock31mastercreated.d13  stock31mastercreated.nib
dos320/: README  clean32sysmaspls.d13  clean32sysmaspls.nib  clean32sysmasstd.d13  clean32sysmasstd.nib  original32sysmaspls.d13  original32sysmaspls.d13.woz  original32sysmaspls.nib  original32sysmasstd.d13.woz  original32sysmasstd.nib  stock32init.d13  stock32init.nib  stock32mastercreated.d13  stock32mastercreated.nib
dos321/: README  clean321sysmaspls.d13  clean321sysmaspls.nib  clean321sysmasstd.d13  clean321sysmasstd.nib  original321sysmaspls.d13  original321sysmaspls.d13.woz  original321sysmasstd.d13  original321sysmasstd.d13.woz  stock321init.d13  stock321init.nib  stock321mastercreated.d13  stock321mastercreated.nib
dos330/: README  clean330sysmas.do  clean330sysmas.nib  original330sysmas.do  original330sysmas.do.woz  original330sysmas.nib  stock330init.do  stock330init.nib  stock330mastercreated.do  stock330mastercreated.nib
dos331/: README  clean331sysmas.do  clean331sysmas.nib  original331sysmas.do.woz  original331sysmas.nib  stock331init.do  stock331init.nib  stock331mastercreated.do  stock331mastercreated.nib
dos332/: README  clean332sysmas.do  clean332sysmas.nib  original332sysmas.do.woz  original332sysmas.nib  stock332init.do  stock332init.nib  stock332mastercreated.do  stock332mastercreated.nib
