#@configure_input@



dosdir=$(libdir)/apple2/dos

s13dir=$(dosdir)/13sector
s16dir=$(dosdir)/16sector

dos310dir=$(s13dir)/dos310
dos320dir=$(s13dir)/dos320
dos321dir=$(s13dir)/dos321
dos330dir=$(s16dir)/dos330
dos331dir=$(s16dir)/dos331
dos332dir=$(s16dir)/dos332



dos310_DATA=\
dos310/original31sysmas.nib \
dos310/stock31init.nib dos310/stock31mastercreated.nib \
dos310/clean31sysmas_stock_rawdos.nib

dos320_DATA=\
dos320/original32sysmaspls.nib dos320/original32sysmasstd.nib \
dos320/stock32init.nib dos320/stock32mastercreated.nib \
dos320/clean32sysmaspls.nib dos320/clean32sysmasstd.nib

dos321_DATA=\
dos321/original321sysmaspls.nib dos321/original321sysmasstd.nib \
dos321/stock321init.nib dos321/stock321mastercreated.nib \
dos321/clean321sysmaspls.nib dos321/clean321sysmasstd.nib

dos330_DATA=\
dos330/original330sysmas.nib \
dos330/stock330init.nib dos330/stock330mastercreated.nib \
dos330/clean330sysmas.nib

dos331_DATA=\
dos331/original331sysmas.nib \
dos331/stock331init.nib dos331/stock331mastercreated.nib \
dos331/clean331sysmas.nib

dos332_DATA=\
dos332/original332sysmas.nib \
dos332/stock332init.nib dos332/stock332mastercreated.nib \
dos332/clean332sysmas.nib
