#@configure_input@



dosdir=$(libdir)/apple2/dos

s13dir=$(dosdir)/13sector
s16dir=$(dosdir)/16sector

dos310dir=$(s13dir)/dos310
dos320dir=$(s13dir)/dos320
dos321dir=$(s13dir)/dos321
dos330dir=$(s16dir)/dos330
dos331dir=$(s16dir)/dos331
dos332dir=$(s16dir)/dos332



dos310_DATA=\
dos310/original31sysmas.nib \
dos310/stock31init.nib dos310/stock31mastercreated.nib \
dos310/clean31sysmas_stock_rawdos.nib

dos320_DATA=\
dos320/original32sysmaspls.nib dos320/original32sysmasstd.nib \
dos320/stock32init.nib dos320/stock32mastercreated.nib \
dos320/clean32sysmaspls.nib dos320/clean32sysmasstd.nib

dos321_DATA=\
dos321/original321sysmaspls.nib dos321/original321sysmasstd.nib \
dos321/stock321init.nib dos321/stock321mastercreated.nib \
dos321/clean321sysmaspls.nib dos321/clean321sysmasstd.nib

dos330_DATA=\
dos330/original330sysmas.nib \
dos330/stock330init.nib dos330/stock330mastercreated.nib \
dos330/clean330sysmas.nib

dos331_DATA=\
dos331/original331sysmas.nib \
dos331/stock331init.nib dos331/stock331mastercreated.nib \
dos331/clean331sysmas.nib

dos332_DATA=\
dos332/original332sysmas.nib \
dos332/stock332init.nib dos332/stock332mastercreated.nib \
dos332/clean332sysmas.nib



EXTRA_DIST=\
dos310/README \
dos310/original31sysmas.nib \
dos310/original31sysmas.d13 \
dos310/stock31init.nib \
dos310/clean31sysmas_stock_rawdos.nib \
dos310/stock31init.d13 \
dos310/stock31mastercreated.nib \
dos310/stock31mastercreated.d13 \
dos310/clean31sysmas_stock_rawdos.d13 \
dos320/stock32init.nib \
dos320/clean32sysmasstd.nib \
dos320/stock32init.d13 \
dos320/README \
dos320/original32sysmaspls.nib \
dos320/stock32mastercreated.nib \
dos320/original32sysmasstd.nib \
dos320/clean32sysmasstd.d13 \
dos320/clean32sysmaspls.d13 \
dos320/clean32sysmaspls.nib \
dos320/stock32mastercreated.d13 \
dos320/original32sysmasstd.d13 \
dos320/original32sysmaspls.d13 \
dos321/clean321sysmaspls.nib \
dos321/README \
dos321/stock321mastercreated.nib \
dos321/stock321init.nib \
dos321/stock321mastercreated.d13 \
dos321/original321sysmaspls.d13 \
dos321/stock321init.d13 \
dos321/clean321sysmasstd.nib \
dos321/original321sysmasstd.d13 \
dos321/clean321sysmaspls.d13 \
dos321/original321sysmaspls.nib \
dos321/original321sysmasstd.nib \
dos321/clean321sysmasstd.d13 \
dos330/stock330mastercreated.nib \
dos330/README \
dos330/stock330mastercreated.do \
dos330/clean330sysmas.nib \
dos330/original330sysmas.do \
dos330/stock330init.nib \
dos330/clean330sysmas.do \
dos330/stock330init.do \
dos330/original330sysmas.nib \
dos331/stock331mastercreated.do \
dos331/stock331mastercreated.nib \
dos331/original331sysmas.nib \
dos331/README \
dos331/original331sysmas.do \
dos331/clean331sysmas.do \
dos331/clean331sysmas.nib \
dos331/stock331init.do \
dos331/stock331init.nib \
dos332/stock332init.nib \
dos332/README \
dos332/clean332sysmas.do \
dos332/original332sysmas.do \
dos332/stock332mastercreated.do \
dos332/original332sysmas.nib \
dos332/clean332sysmas.nib \
dos332/stock332init.do \
dos332/stock332mastercreated.nib \
README
